프로젝트 구조 변경, 리버스 프록시

--- a/back/front/css/header.css
+++ b/back/front/css/header.css
@@ -42,6 +42,11 @@ header{
     color:#fff;
 }
 
+.unsigned a{
+    color:#fff;
+    font-size: 1.2rem !important;
+}
+
 .sign-container a{
     font-size: 2rem;
 }
