--- a/back/front/css/jumbotron.css
+++ b/back/front/css/jumbotron.css
@@ -25,7 +25,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain; */
-    background: url("../../퍼블리싱/img/eisenhower.png") no-repeat center / contain;
+    background: url("../img/eisenhower.png") no-repeat center / contain;
 }
 
 .jumbotron-item-sub{
